Remove legacy project files and add new modular weather app structure
Co-authored-by: l215812 <l215812@lhr.nu.edu.pk>